feat: Add market system and AI agent initialization
Introduces a new market system for players to interact with, including price tracking and history. Also initializes AI agent configuration, enabling future AI-driven behaviors and interactions. Updates game state and player types to accommodate these changes.

Visual styles for scrollbars and text glow are updated to a more vibrant orange theme. The game phase is adjusted to include a 'SETUP' phase before active gameplay.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             background: #000;
         }
         ::-webkit-scrollbar-thumb {
-            background: #FF4500;
+            background: #F7931A;
             border-radius: 0;
         }
         ::-webkit-scrollbar-thumb:hover {
@@ -55,7 +55,7 @@
 
         /* 文字发光效果 */
         .text-glow {
-            text-shadow: 0 0 5px rgba(255, 69, 0, 0.5);
+            text-shadow: 0 0 5px rgba(247, 147, 26, 0.5);
         }
     </style>
 <script type="importmap">
