--- a/index.html
+++ b/index.html
@@ -58,17 +58,9 @@
             text-shadow: 0 0 5px rgba(247, 147, 26, 0.5);
         }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
-  }
-}
-</script>
 </head>
 <body class="bg-[#050505] text-white">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
